tests/ui/fail/incomplete/message.stderr
error: incomplete arguments syntax is not authorized because the feature flag "allow-incomplete" is not set
 --> tests/ui/fail/incomplete/message.rs:8:9
  |
8 |         ...
  |         ^^^
